syntax = "proto3";

package hello;

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
    string credit_card_number = 2;
    string credit_card_expiration_date = 3;
    string user_comment = 4;
    string items_length = 5;
}

message HelloResponse {
    string is_fraud = 1;
}
